--- a/bai 9(JavaScript)/index.html
+++ b/bai 9(JavaScript)/index.html
@@ -63,7 +63,8 @@
         let soThuBa = "20";
         soThuBa = parseInt(soThuBa);
         document.writeln(typeof (soThuBa));
-        // chuoi.length trả về độ dài chuỗi
+        // chuoi.length trả về độ dài chuỗi`
+        // parseInt để ép kiểu về kiểu int
     </script>
 </body>
 </html>
