--- a/bai 10/index.html
+++ b/bai 10/index.html
@@ -175,7 +175,7 @@
         // lấy ra tháng(+ 1 vì như mảng chạy từ 0)
         document.writeln("<br>Tháng: "+(toDay.getMonth()+1));
 
-        // lấy ra tháng(+ 1 vì như mảng chủ nhật là 0)
+        // lấy ra thứ(+ 1 vì như mảng chủ nhật là 0)
         document.writeln("<br>Ngày: "+(toDay.getDay()+1));
     </script>
 
