--- a/bai 12/index.html
+++ b/bai 12/index.html
@@ -48,18 +48,18 @@
             i++
         }
         
-        // alert("hello")
-    // alert dùng để nảy ra thông váo khi vào trang
+    //     alert("hello")
+    // // alert dùng để nảy ra thông váo khi vào trang
 
-        // let result =confirm("sdfsdfsdfds")
-        // if(result)
-        //     document.writeln("Bấm OK")
-        // else
-        //     document.writeln("Bấm Cancel")
+    //     let result  =confirm("sdfsdfsdfds")
+    //     if(result)
+    //         document.writeln("Bấm OK")
+    //     else
+    //         document.writeln("Bấm Cancel")
 
 
-        let result= prompt("Nhập họ tên:","Ví dụ: ABC");
-        document.writeln(result)
+    //     let result= prompt("Nhập họ tên:","Ví dụ: ABC");
+    //     document.writeln(result)
 
 
         // function + tên hàm() {
