--- a/bai 12/index.html
+++ b/bai 12/index.html
@@ -61,7 +61,7 @@
     //     let result= prompt("Nhập họ tên:","Ví dụ: ABC");
     //     document.writeln(result)
 
-
+        // hàm
         // function + tên hàm() {
         //     code logic....
         // }
