--- a/bai 8/index.html
+++ b/bai 8/index.html
@@ -5,18 +5,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+<style>
+body{
+    background-color: rgb(241, 240, 240);
+    font-family: arial;
+}
+body img{
+    width: 100%;
+    margin:auto;
+}
+.main{
+    width: 40%;
+    margin:auto;
+    color: gray;
+    background-color: white;
+    height: auto;
+    border: 3px solid whitesmoke;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.top_main{
+    margin-top: 0;
+    text-align: center;
+    border-bottom: 2px solid whitesmoke;
+}
+form div {
+    margin: 10px 0;
+}
+.name{
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-around;
+}
+.name input{
+    padding: 10px;
+    border: 2px solid whitesmoke;
+    border-radius: 5px;
+}
+.ns{
+    margin: 20px 0;
+}
+.ns div{
+    display:flex;
+    justify-content:space-around;
+}
+.ns select{
+   padding: 10px 50px;
+   border: 2px solid whitesmoke;
+   border-radius: 5px;
+}
+.radio{
+    display: flex;
+    justify-content: space-around;
+    color: black;
+}
+.radio label{
+    padding:10px 35px;
+    border: 2px solid whitesmoke;
+    border-radius: 5px;
+}
+.account input{
+    display: block;
+    margin: 10px;
+    width: 90%;
+    padding: 10px;
+    border: 2px solid whitesmoke;
+    border-radius: 5px;
+}
+button{
+    display: block;
+    justify-content: center;
+    margin: 0 auto;
+    background: #42b72a;
+    color: white;  
+    padding: 12px 20px;
+    font-size: 16px;
+    border-radius: 6px;    
+}
+.footer{
+    margin: 20px 0;
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    color: rgb(11, 110, 230);
+}
+
+    </style>
 </head>
 <body>
     <img src="logofb.png" alt="">
     <div class="main">
         <div class="top_main">
-            Creat a new account
+            <h1><font color="black">Creat a new account</h1></font>
                 <p>text......</p>
         </div>
         <form>
             <div class="name">
-                <input type="text" placeholder="họ">
+                <input type="text" placeholder="Họ">
                 <input type="text" placeholder="Tên">
             </div>
             <div class="ns">
@@ -46,7 +132,25 @@
                 </select>
                 </div>
             </div>
+            <div class="gender">
+                Gender
+                <div class="radio">
+                    <label><input type="radio" name="gt" value="female">Female</label>
+                    <label><input type="radio" name="gt" value="male">Male</label>
+                    <label><input type="radio" name="gt" value="custom">Custom</label>
+                </div>
+                <div class="account">
+                    <input type="text" placeholder="Sdt or email">
+                    <input type="password" placeholder="New password">
+                </div>
+            </div>
+            People who .......... <br><br>
+            text.............
+            <button type="submit">Sign Up</button>
         </form>
+        <div class="footer">
+            <a href="">Already have account?</a>
+        </div>
     </div>
 </body>
 =======
