--- a/bai 7/indext.html
+++ b/bai 7/indext.html
@@ -32,14 +32,14 @@
     <main>
         <div class="top_main">
             <a href=""><img src="lichthidau.jpg" alt=""></a>
-            <a href=""><img src="big_img.jpg" alt=""></a>
+            <a href=""><img id="banner" src="big_muado.jpg" alt=""></a>
         </div>
         <div class="mid_main">
             <div class="ngang">
                 <h1>Mới ra mắt</h1>
                 <div class="phim_ngang">
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
+                    <div onclick="chonPhim(1)">
+                        <div href=""><img src="ngang.jpeg" alt=""></div>
                         <br>
                         Mưa đỏ
                     </div>
@@ -118,28 +118,28 @@
             <div class="doc">
                 <h1>Anime hot</h1>
                 <div class="phim_doc">
-                    <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
+                    <div onclick="chonPhim(2)">
+                        <div href=""><img src="conan.jpg" alt=""></div>
                         <br>
                         Mưa đỏ
                     </div>
                     <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
+                        <a href=""><img src="conan.jpg" alt=""></a>
                         <br>
                         Mưa đỏ
                     </div>
                     <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
+                        <a href=""><img src="conan.jpg" alt=""></a>
                         <br>
                         Mưa đỏ
                     </div>
                     <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
+                        <a href=""><img src="conan.jpg" alt=""></a>
                         <br>
                         Mưa đỏ
                     </div>
                     <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
+                        <a href=""><img src="conan.jpg" alt=""></a>
                         <br>
                         Mưa đỏ
                     </div>
@@ -279,5 +279,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
