--- a/bai 7/indext.html
+++ b/bai 7/indext.html
@@ -32,86 +32,109 @@
     <main>
         <div class="top_main">
             <a href=""><img src="lichthidau.jpg" alt=""></a>
-            <a href=""><img id="banner" src="big_muado.jpg" alt=""></a>
+            <a href=""><img id="banner" src="big_muado.jpg" alt=""> </a>
+            <div id="thongTinPhim">
+                <div id="xem">Xem ngay</div>
+                <a id="trailer" href="https://youtu.be/BD6PoZJdt_M?si=A7C7PuvGTgCB6Hg5" target="_blank">Trailer</a>
+                <div id="tenPhim">Mưa đỏ</div>                    
+                <div id="theLoai">Phim chiếu rạp</div>
+                <div id="quocGia">Việt Nam</div>
+                <div id="nam">2025</div>
+                <div id="thoiLuong">2h</div>
+                <div id="doTuoi">16+</div>
+            </div>
         </div>
         <div class="mid_main">
             <div class="ngang">
                 <h1>Mới ra mắt</h1>
                 <div class="phim_ngang">
                     <div onclick="chonPhim(1)">
-                        <div href=""><img src="ngang.jpeg" alt=""></div>
-                        <br>
-                        Mưa đỏ
+                        <div href=""><img src="ngang.jpeg" alt="">
+                            <br>
+                            Mưa đỏ
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(4)">
+                        <div href=""><img src="songtrung.jpg" alt="">
+                            <br>
+                            Song trùng
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(5)">
+                        <div href=""><img src="saigonyo.jpg" alt="">
+                            <br>
+                            Sài Gòn Yo!
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="mini">
                 <h1>Sự kiện thể thao</h1>
                 <div class="phim_mini">
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(6)">
+                        <div href=""><img src="MU-TOT.jpg" alt="">
+                            <br>
+                            Manchester United - Tottenham Hotspur
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(7)">
+                        <div href=""><img src="Eve-Ful.jpg" alt="">
+                            <br>
+                            Everton - Fulham
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(8)">
+                        <div href=""><img src="WU-Bur.jpg" alt="">
+                            <br>
+                            West Ham United - Burnley
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(9)">
+                        <div href=""><img src="Sun-Ars.jpg" alt="">
+                            <br>
+                            Sunderland - Arsenal
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(10)">
+                        <div href=""><img src="Chel-WW.jpg" alt="">
+                            <br>
+                            Chelsea - Wolverhampton
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="doc">
                 <h1>Phim bộ hot</h1>
                 <div class="phim_doc">
-                    <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(11)">
+                        <div href=""><img src="bongdungtrungso.jpg" alt="">
+                            <br>
+                            Bỗng dưng trúng số
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(12)">
+                        <div href=""><img src="cam.jpg" alt="">
+                            <br>
+                            Cám
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(13)">
+                        <div href=""><img src="johnwich.jpg" alt="">
+                            <br>
+                            Johnwich
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(14)">
+                        <div href=""><img src="mai.jpg" alt="">
+                            <br>
+                            Mai
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="doc.jpg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(15)">
+                        <div href=""><img src="deptraithaysaisai.jpg" alt="">
+                            <br>
+                            Đẹp trai thấy sai sai
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,49 +142,57 @@
                 <h1>Anime hot</h1>
                 <div class="phim_doc">
                     <div onclick="chonPhim(2)">
-                        <div href=""><img src="conan.jpg" alt=""></div>
+                        <div href=""><img src="saitama1.jpg" alt="">
                         <br>
-                        Mưa đỏ
+                        One Punch Man
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="conan.jpg" alt=""></a>
+                    <div onclick="chonPhim(3)">
+                        <div href=""><img src="conan.jpg" alt="">
                         <br>
-                        Mưa đỏ
+                        Conan
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="conan.jpg" alt=""></a>
+                    <div onclick="chonPhim(16)">
+                        <div href=""><img src="kungfupanda.jpg" alt="">
                         <br>
-                        Mưa đỏ
+                        Kung Fu Panda 4
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="conan.jpg" alt=""></a>
+                    <div onclick="chonPhim(17)">
+                        <div href=""><img src="minion.jpg" alt="">
                         <br>
-                        Mưa đỏ
+                        Minion
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="conan.jpg" alt=""></a>
+                    <div onclick="chonPhim(18)">
+                        <div href=""><img src="nemo.jpg" alt="">
                         <br>
-                        Mưa đỏ
+                        Nemo
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="ngang">
-                <h1>Giải trí tổng hợp mới nhất</h1>
+                <h1>Dành cho bạn</h1>
                 <div class="phim_ngang">
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(1)">
+                        <div href=""><img src="ngang.jpeg" alt="">
+                            <br>
+                            Mưa đỏ
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(4)">
+                        <div href=""><img src="songtrung.jpg" alt="">
+                            <br>
+                            Song trùng
+                        </div>
                     </div>
-                    <div>
-                        <a href=""><img src="ngang.jpeg" alt=""></a>
-                        <br>
-                        Mưa đỏ
+                    <div onclick="chonPhim(5)">
+                        <div href=""><img src="saigonyo.jpg" alt="">
+                            <br>
+                            Sài Gòn Yo!
+                        </div>
                     </div>
                 </div>
             </div>
